# powerplant-coding-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: api.py
tests/functionnal/: test_api.py
