[project]
name = "powerplant-coding-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "pre-commit>=4.4.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov=main --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["."]